--- a/00-abstract.tex
+++ b/00-abstract.tex
@@ -5,7 +5,7 @@
 
 \cleardoubleoddpage%  Make sure to start abstract on a new odd page
 \begin{abstract*}
-Space for your abstract.
+    This thesis explores the effectiveness of semi-supervised machine learning methods for anomaly detection in respiratory sounds. It focuses on two approaches: reconstruction-based methods using Variational Autoencoders (VAE) and density estimation methods using Group Masked Autoencoders for Density Estimation (GMADE). Utilizing the Respiratory Sound Database, the study evaluates these methods' ability to detect anomalies such as wheezes and crackles in respiratory cycles. The thesis provides a comprehensive comparison of these two approaches under various conditions, assessing their generalization capabilities and performance on different subsets of the datasetas well as the hyperparameter relevance while training. Results demonstrate the potential of these models in improving the diagnosis and monitoring of respiratory diseases, highlighting the importance of advanced machine learning techniques in medical anomaly detection.
 \end{abstract*}
 
 %% 
