Fixed spelling errors, added appendix

--- a/01-introduction.tex
+++ b/01-introduction.tex
@@ -12,7 +12,7 @@ A key challenge in this field is the limited availability of data. With growing 
 \section{Objectives and Approach}
 
 The primary goal of this thesis is to evaluate the effectiveness of reconstruction-based and density-estimation-based machine learning methods on respiratory sound data in a semi-supervised context. Specifically, we aim to determine if both approaches can utilize common feature representations for this data type and identify which method is more effective under various conditions. We also want to determine whether existing anomaly detection approaches to respiratory sounds can be improved upon to deliver more accurate predictions or if there is a need for novel datasets specifically designed for training semi-supervised models. \\
-To achieve this, we will employ two distinct machine learning architectures: Variational Autoencoders for the reconstruction-based approach and Grouped Masked Autoencoders for Density Estimation (GMADE) for the density-estimation-based approach. By altering the dataset's distribution, we will create different scenarios to determine whether a particular model is more advantageous for specific patient groups and if they are applicable in real-world situations.
+To achieve this, we will employ two distinct machine learning architectures: Variational Autoencoders (VAE) for the reconstruction-based approach and Grouped Masked Autoencoders for Density Estimation (GMADE) for the density-estimation-based approach. By altering the dataset's distribution, we will create different scenarios to determine whether a particular model is more advantageous for specific patient groups and if they are applicable in real-world situations.
 
 \section{Outline}
 This thesis begins by establishing the necessary theoretical background to understand key concepts used throughout the text. We will introduce the dataset utilized in our study, explore digital sound representations, and provide an overview of anomaly detection. Additionally, we will clarify the differences between reconstruction and density estimation approaches.\\
