--- a/02-theory.tex
+++ b/02-theory.tex
@@ -14,7 +14,7 @@ Understanding these distinctions in pulmonary sounds is vital for developing aut
 \subsection{Digital Representation of Sound}
 Sound signals, variations in air pressure known as sound waves, can be digitally represented in several ways. The following will give an overview of the used methods in this thesis.\\\\
 \textbf{Waveforms} are the most straightforward representation, where the sound signal is a sequence of numbers $\mathbf{x}_n$ representing air pressure at time step $n\in \mathbb{N}$. The key parameter here is the sampling rate, which dictates how often the audio signal is sampled per second~\cite{backstrom2020introduction}.\\\\
-\textbf{Spectrogram} representations, unlike waveforms, allow for a visual examination of the sound signal. This involves transforming the signal from a real-valued time-domain to a complex-valued frequency-domain representation using the Discrete Fourier Transform (DFT), mathematically defined as \[ X_k=\sum_{n=0}^{N-1}x_ne^{-i2\pi\frac{k\times n}{N}} \]. The result of this transformation provides a good overview of the frequencies that make up the sound signal. However, we are more interested in local events for non-stationary signals like respiratory sounds.\\
+\textbf{Spectrogram} representations, unlike waveforms, allow for a visual examination of the sound signal. This involves transforming the signal from a real-valued time-domain to a complex-valued frequency-domain representation using the Discrete Fourier Transform (DFT), mathematically defined as \[ X_k=\sum_{n=0}^{N-1}x_ne^{-i2\pi\frac{k\times n}{N}}.\] The result of this transformation provides a good overview of the frequencies that make up the sound signal. However, we are more interested in local events for non-stationary signals like respiratory sounds.\\
 The Short Time Fourier Transform (STFT) helps obtain a representation that summarizes the sound signals' constituting frequencies while showing local changes in their distribution. It first divides the signal into short slices, also called windows. It then applies a windowing function to each slice, gradually reducing the signal amplitude towards the edges. This continuity between the windows is crucial for minimizing spectral leakage, a phenomenon where sudden changes in the signal between the windows get misinterpreted as sudden changes in the original signal. Finally, STFT involves applying a DFT on every window. We obtain a time-frequency representation typically visualized by converting $X_k$ to the log-spectrum $20log_{10}||X_k||$~\cite{backstrom2020introduction}.\\
 Mel-Spectrograms refine this representation by aligning frequencies to the mel scale, approximating human hearing perception. This transformation is mathematically expressed as $m=2595log_{10}\left(1+\frac{f}{700}\right)$ as formulated by O'Shaughnessy (1987)~\cite{o1987speech}.\\\\
 % Image for Spectrogram
