--- a/05-experiments.tex
+++ b/05-experiments.tex
@@ -3,10 +3,10 @@
 \cleardoubleoddpage%  Make sure to start each chapter on a new odd page
 \chapter{Experiments and Results}
 \section{Experimental Setup}
-We conducted our experiments on a machine equipped with an AMD Ryzen 5 1600 CPU and a NVIDIA GeForce GTX 1070 GPU running Ubuntu 23.04. The initial step involved establishing a baseline performance to later asses both models under various conditions. We utilized the PyTorch framework~\cite{paszke2019pytorch} for training, taking advantage of its pre-built functions for neural network training. The Adam optimizer was employed throughout the training processes, along with the \lstinline{ReduceLROnPlateau} learning rate scheduler set to a patience of 5 epochs. Additionally, we implemented early stopping, evaluating the model's performance on the validation set after each training epoch, with a patience threshold of 10 epochs.\\
+We conducted our experiments on a machine equipped with an AMD Ryzen 5 1600 CPU and a NVIDIA GeForce GTX 1070 GPU running Ubuntu 23.04. The initial step involved establishing a baseline performance to later asses both models under various conditions. We utilized the PyTorch framework~\cite{paszke2019pytorch} for training, taking advantage of its pre-built functions for neural network training. The Adam optimizer was employed throughout the training processes, along with the \lstinline{ReduceLROnPlateau} learning rate scheduler set to a patience of five epochs. Additionally, we implemented early stopping, evaluating the model's performance on the validation set after each training epoch, with a patience threshold of ten epochs.\\
 For optimal baseline determination, we used the Optuna framework~\cite{akiba2019optuna} for hyperparameter optimization. The objectives included maximizing the AUC-Score and Balanced Accuracy on the validation set while minimizing the epochs required to achieve respectable results. This process yielded the following hyperparameters for our models:\\\\
 \textbf{VAE}: The optimal batch size was determined to be 32, with a learning rate of 1e-4. The \textit{nf} hyperparameter in the DCGAN architecture (see \autoref{code:decoder}), which affects the depth of feature maps in both the generator and discriminator, was found to be most effective at 128. The size of the latent space vector was set to 128, and the alpha weighting factor balancing the Mean Squared Error loss and the Kullback-Leibler Divergence was adjusted to 0.5.\\\\
-\textbf{GMADE}: A batch size of 128 and a learning rate of 1e-3 were optimal for this model. Using a single mask configuration without resampling the mask during training, we achieved the best results with a hidden layer structure of [256, 156, 512].
+\textbf{GMADE}: A batch size of 128 and a learning rate of 1e-3 were optimal for this model. Using a single mask configuration without resampling the mask during training, we achieved the best results with a hidden layer structure of [256, 256, 512].
 \begin{lstlisting}[label=code:decoder,language=Python,caption={Overview of the decoder architecture with nc (number of input channels), nz (size of latent space) and nf (depth of feature maps)}]
     class Decoder(nn.Module):
     def __init__(self, nc, nz, nf):
@@ -83,7 +83,7 @@ We established a binary classification threshold based on anomaly scores to gaug
 \end{table}
 
 Our performance results (\autoref{fig:generalization}) indicate that with its reconstruction-based approach, the Variational Autoencoder (VAE) slightly outperforms the GMADE models in accuracy and AUC-Score. However, all models show a notable number of false positives, possibly due to the high environmental noise in the recordings the models assume to be anomalies. The ensemble GMADE model demonstrated the highest TNR, indicating a better balance in minimizing false positives while identifying healthy patients. Interestingly, while the ensemble improved the TNR and the AUC-Score marginally, it did not enhance the Balanced Accuracy compared to individual orderings due to the lower TPR. The standard deviation (STD) of the predictions of the GMADE variants is consistently lower than that of VAE. This could indicate VAE's ability to fit the data's variability better. The only exception is the mid-frame ordered GMADE, which has a much higher STD for the test set than the validation set, hinting at a possible overfitting to the validation set.\\
-All models are competitive to the weakly-supervised approach introduced by~\cite{cozzatti2022variational} and allow for a more nuanced inspection of the capabilities of the models.
+All models are competitive to the weakly-supervised approach introduced by Cozzatti et al. (2022)~\cite{cozzatti2022variational} and allow for a more nuanced inspection of the capabilities of the models.
 \section{Age and Gender Differences in Model Accuracy}
 Machine learning algorithms often suffer from imbalances in gender representation, mainly due to insufficient data from females, youths, and older individuals. This imbalance is critical in medical applications where fairness across different genders and age groups must be assured. To address this, we evaluated our models' performance on various subgroups within our dataset, using thresholds established as previously described.\\
 \textbf{Gender}: We analyzed the models' performance by filtering the test set for male and female samples separately.
@@ -156,7 +156,7 @@ Our investigation began with an SNR of 30 dB, where the original signal was domi
 \label{fig:balaccsnr}
 \end{figure}
 
-As anticipated, \autoref{fig:balaccsnr} shows the Balanced Accuracy of all models decreases with increasing noise. While we observed near-original performance at 30 dB SNR, a significant drop is noticeable at 20dB for all GMADE models. Interestingly, the VAE could keep the same accuracy at 20dB SNR compared to 30dB SNR and performs best at these levels of noise. However, all models fail to have meaningful separation power from 10dB SNR.\\
+As anticipated, \autoref{fig:balaccsnr} shows the Balanced Accuracy of all models decreases with increasing noise. While we observed near-original performance at 30 dB SNR, a significant drop is noticeable at 20 dB for all GMADE models. Interestingly, the VAE could keep the same accuracy at 20 dB SNR compared to 30 dB SNR and performs best at these levels of noise. However, all models fail to have meaningful separation power from 10 dB SNR.\\
 It is noteworthy that the original signal already contained substantial environmental noise. Nevertheless, the VAE seems to be more robust against noise in the sound signal.
 \section{Model Performance on Crackles and Wheezes}
 The ability to distinguish between crackles and wheezes is vital in diagnosing different respiratory conditions, given their distinct acoustic characteristics. To assess this, we modified the test set to evaluate performance with crackles and wheezes separately, alongside healthy sounds.
