--- a/09-conclusion.tex
+++ b/09-conclusion.tex
@@ -15,7 +15,7 @@ Another significant challenge faced in this research is the need for more data t
 \section{Directions for Future Research}
 Future research should focus on addressing the limitations we have identified. A key area is the need for more data. Researchers could either concentrate on collecting more real-world respiratory sound data or investigate data augmentation techniques that enhance semi-supervised learning.\\
 Regarding the issue of interpretability, there is potential for exploring models that effectively use MelSpectrograms. Specifically, reconstruction-based methods combined with MelSpectrograms could be promising. They could highlight irregularities in the spectrogram, which healthcare professionals could directly interpret. This approach could make it easier for medical experts to understand and trust the machine learning outputs.\\
-Moreover, there is a need to evaluate more diverse model architectures within both the reconstruction-based and density-estimation-based frameworks. Comparing these new models to existing ones could provide further insights into which approach is more suitable for analyzing respiratory sounds. One suggestion is to experiment with 2-dimensional convolution reconstruction models, which leverage the image-like characteristics of MelSpectrograms, potentially offering better interpretability by highlighting the areas of deviation from the original.
+Moreover, there is a need to evaluate more diverse model architectures within both the reconstruction-based and density-estimation-based frameworks. Comparing these new models to existing ones could provide further insights into which approach is more suitable for analyzing respiratory sounds. One suggestion is to experiment with two dimensional convolution reconstruction models, which leverage the image-like characteristics of MelSpectrograms, potentially offering better interpretability by highlighting the areas of deviation from the original.
 
 %% 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
