--- a/91-appendix.tex
+++ b/91-appendix.tex
@@ -1,13 +1,12 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% 
 \cleardoubleoddpage%  Make sure to start each chapter on a new odd page
-\chapter{An Appendix}
+\chapter{Code Repository}
 
-Space for an appendix.
-You can have more than one appendix chapter.
-Appendices are, of course, optional.
+The code implementations for this project can be found on GitHub at the following links:
 
-
+\textbf{GMADE:} \href{https://github.com/da-luggas/gmade-icbhi2017}{https://github.com/da-luggas/gmade-icbhi2017} \\\\
+\textbf{VAE:} \href{https://github.com/da-luggas/vae-icbhi2017}{https://github.com/da-luggas/vae-icbhi2017}
 
 %% 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
